Nav bar changes...medium nav bar size was too short to fit all nav bar items, changed height to be consistent due to whitespace issue

--- a/tigermeals/static/css/shop-homepage.css
+++ b/tigermeals/static/css/shop-homepage.css
@@ -724,3 +724,7 @@ body {
   border-top: 1px solid rgba(0, 0, 0, 0.1);
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
+
+.navbar-height {
+  height:70px;
+}
